--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "object",
     "structure",
     "template",
-    "update"
+    "transform"
   ],
   "author": "7thCode",
   "license": "MIT",
